dev/ecomp.output
Terminals unused in grammar

   END
   CHARSTR
   ARRAY
   LPREC
   RPREC


Grammar

    0 $accept: program $end

    1 program: programx

    2 programx: program0
    3         | varlistend program0
    4         | programx program0

    5 varlistend: varlistend varlists
    6           | varlists

    7 varlists: varlist SEMICOL

    8 varlist: declr
    9        | varlist COMMA declr

   10 declr: term
   11      | arrayterm

   12 arrayterm: term LBRCT expr RBRCT

   13 program0: process0 statements RB
   14         | process0 RB
   15         | process1 LB statements RB
   16         | process1 LB RB
   17         | SUBRTN subroutines program0

   18 subroutines: subnidarglist subbody

   19 subbody: LB statements RB
   20        | LB RB

   21 subnidarglist: subname LP arglist RP

   22 subname: ID

   23 process0: process1 LB SEMICOL

   24 process1: PROCESS term

   25 statements: statement
   26           | statements statement

   27 statement: ifstatement
   28          | ifstatement ELSE elsestatement
   29          | whilestatement
   30          | assignment
   31          | lockstatement
   32          | haltstatement
   33          | seekstatement
   34          | openstatement
   35          | readstatement
   36          | writestatement
   37          | closestatement
   38          | subroutine
   39          | locdeclare

   40 openstatement: openfirst opensecond

   41 openfirst: declrEQ OPEN LP arglist

   42 opensecond: RP SEMICOL

   43 seekstatement: SEEK LP arglist RP SEMICOL

   44 readstatement: READ LP arglist RP SEMICOL

   45 writestatement: WRITE LP arglist RP SEMICOL

   46 closestatement: CLOSE LP arglist RP SEMICOL

   47 locdeclare: arglist SEMICOL

   48 whilestatement: whilepart LB rest

   49 subroutine: subrtnid subrest

   50 subrtnid: term LP

   51 subrest: arglist RP SEMICOL

   52 arglist: term
   53        | arglist COMMA term

   54 whilepart: whilehead LP cond RP

   55 whilehead: WHILE

   56 ifstatement: ifpart rest

   57 ifpart: IF LP cond RP LB

   58 rest: statements RB

   59 elsestatement: elsepart statements RB

   60 elsepart: LB

   61 cond: andcond
   62     | LP cond RP OR LP cond RP
   63     | LP cond RP AND LP cond RP

   64 andcond: expr
   65        | expr AND expr
   66        | expr OR expr
   67        | NOT LP cond RP

   68 lockstatement: lockhead statements UNLOCK SEMICOL

   69 lockhead: LOCK SEMICOL

   70 haltstatement: HALT SEMICOL

   71 assignment: declrEQ assexpr SEMICOL

   72 declrEQ: declr EQ

   73 assexpr: expr

   74 expr: expr0

   75 expr0: mulexpr
   76      | expr0 PLUS mulexpr
   77      | expr0 MINUS mulexpr
   78      | expr0 GE_OP mulexpr
   79      | expr0 GT_OP mulexpr
   80      | expr0 LE_OP mulexpr
   81      | expr0 LT_OP mulexpr
   82      | expr0 EQ_OP mulexpr
   83      | expr0 NE_OP mulexpr

   84 mulexpr: declr
   85        | MINUS declr
   86        | mulexpr DIV declr
   87        | mulexpr MUL declr

   88 term: dblqtid DBLQT
   89     | ID
   90     | NUMBER

   91 dblqtid: DBLQT ID


Terminals, with rules where they appear

$end (0) 0
error (256)
SUBRTN (258) 17
NUMBER (259) 90
ID (260) 22 89 91
IF (261) 57
ELSE (262) 28
WHILE (263) 55
EQ (264) 72
PLUS (265) 76
MINUS (266) 77 85
MUL (267) 87
DIV (268) 86
END (269)
PROCESS (270) 24
RP (271) 21 42 43 44 45 46 51 54 57 62 63 67
LP (272) 21 41 43 44 45 46 50 54 57 62 63 67
RB (273) 13 14 15 16 19 20 58 59
LB (274) 15 16 19 20 23 48 57 60
RBRCT (275) 12
LBRCT (276) 12
AND (277) 63 65
OR (278) 62 66
NOT (279) 67
LE_OP (280) 80
GE_OP (281) 78
LT_OP (282) 81
GT_OP (283) 79
EQ_OP (284) 82
NE_OP (285) 83
HALT (286) 70
OPEN (287) 41
READ (288) 44
WRITE (289) 45
CLOSE (290) 46
SEEK (291) 43
SEMICOL (292) 7 23 42 43 44 45 46 47 51 68 69 70 71
COMMA (293) 9 53
LOCK (294) 69
UNLOCK (295) 68
DBLQT (296) 88 91
CHARSTR (297)
ARRAY (298)
LPREC (299)
RPREC (300)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
programx (48)
    on left: 2 3 4, on right: 1 4
varlistend (49)
    on left: 5 6, on right: 3 5
varlists (50)
    on left: 7, on right: 5 6
varlist (51)
    on left: 8 9, on right: 7 9
declr (52)
    on left: 10 11, on right: 8 9 72 84 85 86 87
arrayterm (53)
    on left: 12, on right: 11
program0 (54)
    on left: 13 14 15 16 17, on right: 2 3 4 17
subroutines (55)
    on left: 18, on right: 17
subbody (56)
    on left: 19 20, on right: 18
subnidarglist (57)
    on left: 21, on right: 18
subname (58)
    on left: 22, on right: 21
process0 (59)
    on left: 23, on right: 13 14
process1 (60)
    on left: 24, on right: 15 16 23
statements (61)
    on left: 25 26, on right: 13 15 19 26 58 59 68
statement (62)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39, on right: 25 26
openstatement (63)
    on left: 40, on right: 34
openfirst (64)
    on left: 41, on right: 40
opensecond (65)
    on left: 42, on right: 40
seekstatement (66)
    on left: 43, on right: 33
readstatement (67)
    on left: 44, on right: 35
writestatement (68)
    on left: 45, on right: 36
closestatement (69)
    on left: 46, on right: 37
locdeclare (70)
    on left: 47, on right: 39
whilestatement (71)
    on left: 48, on right: 29
subroutine (72)
    on left: 49, on right: 38
subrtnid (73)
    on left: 50, on right: 49
subrest (74)
    on left: 51, on right: 49
arglist (75)
    on left: 52 53, on right: 21 41 43 44 45 46 47 51 53
whilepart (76)
    on left: 54, on right: 48
whilehead (77)
    on left: 55, on right: 54
ifstatement (78)
    on left: 56, on right: 27 28
ifpart (79)
    on left: 57, on right: 56
rest (80)
    on left: 58, on right: 48 56
elsestatement (81)
    on left: 59, on right: 28
elsepart (82)
    on left: 60, on right: 59
cond (83)
    on left: 61 62 63, on right: 54 57 62 63 67
andcond (84)
    on left: 64 65 66 67, on right: 61
lockstatement (85)
    on left: 68, on right: 31
lockhead (86)
    on left: 69, on right: 68
haltstatement (87)
    on left: 70, on right: 32
assignment (88)
    on left: 71, on right: 30
declrEQ (89)
    on left: 72, on right: 41 71
assexpr (90)
    on left: 73, on right: 71
expr (91)
    on left: 74, on right: 12 64 65 66 73
expr0 (92)
    on left: 75 76 77 78 79 80 81 82 83, on right: 74 76 77 78 79 80
    81 82 83
mulexpr (93)
    on left: 84 85 86 87, on right: 75 76 77 78 79 80 81 82 83 86 87
term (94)
    on left: 88 89 90, on right: 10 12 24 50 52 53
dblqtid (95)
    on left: 91, on right: 88


state 0

    0 $accept: . program $end

    SUBRTN   shift, and go to state 1
    NUMBER   shift, and go to state 2
    ID       shift, and go to state 3
    PROCESS  shift, and go to state 4
    DBLQT    shift, and go to state 5

    program     go to state 6
    programx    go to state 7
    varlistend  go to state 8
    varlists    go to state 9
    varlist     go to state 10
    declr       go to state 11
    arrayterm   go to state 12
    program0    go to state 13
    process0    go to state 14
    process1    go to state 15
    term        go to state 16
    dblqtid     go to state 17


state 1

   17 program0: SUBRTN . subroutines program0

    ID  shift, and go to state 18

    subroutines    go to state 19
    subnidarglist  go to state 20
    subname        go to state 21


state 2

   90 term: NUMBER .

    $default  reduce using rule 90 (term)


state 3

   89 term: ID .

    $default  reduce using rule 89 (term)


state 4

   24 process1: PROCESS . term

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    DBLQT   shift, and go to state 5

    term     go to state 22
    dblqtid  go to state 17


state 5

   91 dblqtid: DBLQT . ID

    ID  shift, and go to state 23


state 6

    0 $accept: program . $end

    $end  shift, and go to state 24


state 7

    1 program: programx .
    4 programx: programx . program0

    SUBRTN   shift, and go to state 1
    PROCESS  shift, and go to state 4

    $default  reduce using rule 1 (program)

    program0  go to state 25
    process0  go to state 14
    process1  go to state 15


state 8

    3 programx: varlistend . program0
    5 varlistend: varlistend . varlists

    SUBRTN   shift, and go to state 1
    NUMBER   shift, and go to state 2
    ID       shift, and go to state 3
    PROCESS  shift, and go to state 4
    DBLQT    shift, and go to state 5

    varlists   go to state 26
    varlist    go to state 10
    declr      go to state 11
    arrayterm  go to state 12
    program0   go to state 27
    process0   go to state 14
    process1   go to state 15
    term       go to state 16
    dblqtid    go to state 17


state 9

    6 varlistend: varlists .

    $default  reduce using rule 6 (varlistend)


state 10

    7 varlists: varlist . SEMICOL
    9 varlist: varlist . COMMA declr

    SEMICOL  shift, and go to state 28
    COMMA    shift, and go to state 29


state 11

    8 varlist: declr .

    $default  reduce using rule 8 (varlist)


state 12

   11 declr: arrayterm .

    $default  reduce using rule 11 (declr)


state 13

    2 programx: program0 .

    $default  reduce using rule 2 (programx)


state 14

   13 program0: process0 . statements RB
   14         | process0 . RB

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    IF      shift, and go to state 30
    WHILE   shift, and go to state 31
    RB      shift, and go to state 32
    HALT    shift, and go to state 33
    READ    shift, and go to state 34
    WRITE   shift, and go to state 35
    CLOSE   shift, and go to state 36
    SEEK    shift, and go to state 37
    LOCK    shift, and go to state 38
    DBLQT   shift, and go to state 5

    declr           go to state 39
    arrayterm       go to state 12
    statements      go to state 40
    statement       go to state 41
    openstatement   go to state 42
    openfirst       go to state 43
    seekstatement   go to state 44
    readstatement   go to state 45
    writestatement  go to state 46
    closestatement  go to state 47
    locdeclare      go to state 48
    whilestatement  go to state 49
    subroutine      go to state 50
    subrtnid        go to state 51
    arglist         go to state 52
    whilepart       go to state 53
    whilehead       go to state 54
    ifstatement     go to state 55
    ifpart          go to state 56
    lockstatement   go to state 57
    lockhead        go to state 58
    haltstatement   go to state 59
    assignment      go to state 60
    declrEQ         go to state 61
    term            go to state 62
    dblqtid         go to state 17


state 15

   15 program0: process1 . LB statements RB
   16         | process1 . LB RB
   23 process0: process1 . LB SEMICOL

    LB  shift, and go to state 63


state 16

   10 declr: term .
   12 arrayterm: term . LBRCT expr RBRCT

    LBRCT  shift, and go to state 64

    $default  reduce using rule 10 (declr)


state 17

   88 term: dblqtid . DBLQT

    DBLQT  shift, and go to state 65


state 18

   22 subname: ID .

    $default  reduce using rule 22 (subname)


state 19

   17 program0: SUBRTN subroutines . program0

    SUBRTN   shift, and go to state 1
    PROCESS  shift, and go to state 4

    program0  go to state 66
    process0  go to state 14
    process1  go to state 15


state 20

   18 subroutines: subnidarglist . subbody

    LB  shift, and go to state 67

    subbody  go to state 68


state 21

   21 subnidarglist: subname . LP arglist RP

    LP  shift, and go to state 69


state 22

   24 process1: PROCESS term .

    $default  reduce using rule 24 (process1)


state 23

   91 dblqtid: DBLQT ID .

    $default  reduce using rule 91 (dblqtid)


state 24

    0 $accept: program $end .

    $default  accept


state 25

    4 programx: programx program0 .

    $default  reduce using rule 4 (programx)


state 26

    5 varlistend: varlistend varlists .

    $default  reduce using rule 5 (varlistend)


state 27

    3 programx: varlistend program0 .

    $default  reduce using rule 3 (programx)


state 28

    7 varlists: varlist SEMICOL .

    $default  reduce using rule 7 (varlists)


state 29

    9 varlist: varlist COMMA . declr

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    DBLQT   shift, and go to state 5

    declr      go to state 70
    arrayterm  go to state 12
    term       go to state 16
    dblqtid    go to state 17


state 30

   57 ifpart: IF . LP cond RP LB

    LP  shift, and go to state 71


state 31

   55 whilehead: WHILE .

    $default  reduce using rule 55 (whilehead)


state 32

   14 program0: process0 RB .

    $default  reduce using rule 14 (program0)


state 33

   70 haltstatement: HALT . SEMICOL

    SEMICOL  shift, and go to state 72


state 34

   44 readstatement: READ . LP arglist RP SEMICOL

    LP  shift, and go to state 73


state 35

   45 writestatement: WRITE . LP arglist RP SEMICOL

    LP  shift, and go to state 74


state 36

   46 closestatement: CLOSE . LP arglist RP SEMICOL

    LP  shift, and go to state 75


state 37

   43 seekstatement: SEEK . LP arglist RP SEMICOL

    LP  shift, and go to state 76


state 38

   69 lockhead: LOCK . SEMICOL

    SEMICOL  shift, and go to state 77


state 39

   72 declrEQ: declr . EQ

    EQ  shift, and go to state 78


state 40

   13 program0: process0 statements . RB
   26 statements: statements . statement

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    IF      shift, and go to state 30
    WHILE   shift, and go to state 31
    RB      shift, and go to state 79
    HALT    shift, and go to state 33
    READ    shift, and go to state 34
    WRITE   shift, and go to state 35
    CLOSE   shift, and go to state 36
    SEEK    shift, and go to state 37
    LOCK    shift, and go to state 38
    DBLQT   shift, and go to state 5

    declr           go to state 39
    arrayterm       go to state 12
    statement       go to state 80
    openstatement   go to state 42
    openfirst       go to state 43
    seekstatement   go to state 44
    readstatement   go to state 45
    writestatement  go to state 46
    closestatement  go to state 47
    locdeclare      go to state 48
    whilestatement  go to state 49
    subroutine      go to state 50
    subrtnid        go to state 51
    arglist         go to state 52
    whilepart       go to state 53
    whilehead       go to state 54
    ifstatement     go to state 55
    ifpart          go to state 56
    lockstatement   go to state 57
    lockhead        go to state 58
    haltstatement   go to state 59
    assignment      go to state 60
    declrEQ         go to state 61
    term            go to state 62
    dblqtid         go to state 17


state 41

   25 statements: statement .

    $default  reduce using rule 25 (statements)


state 42

   34 statement: openstatement .

    $default  reduce using rule 34 (statement)


state 43

   40 openstatement: openfirst . opensecond

    RP  shift, and go to state 81

    opensecond  go to state 82


state 44

   33 statement: seekstatement .

    $default  reduce using rule 33 (statement)


state 45

   35 statement: readstatement .

    $default  reduce using rule 35 (statement)


state 46

   36 statement: writestatement .

    $default  reduce using rule 36 (statement)


state 47

   37 statement: closestatement .

    $default  reduce using rule 37 (statement)


state 48

   39 statement: locdeclare .

    $default  reduce using rule 39 (statement)


state 49

   29 statement: whilestatement .

    $default  reduce using rule 29 (statement)


state 50

   38 statement: subroutine .

    $default  reduce using rule 38 (statement)


state 51

   49 subroutine: subrtnid . subrest

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    DBLQT   shift, and go to state 5

    subrest  go to state 83
    arglist  go to state 84
    term     go to state 85
    dblqtid  go to state 17


state 52

   47 locdeclare: arglist . SEMICOL
   53 arglist: arglist . COMMA term

    SEMICOL  shift, and go to state 86
    COMMA    shift, and go to state 87


state 53

   48 whilestatement: whilepart . LB rest

    LB  shift, and go to state 88


state 54

   54 whilepart: whilehead . LP cond RP

    LP  shift, and go to state 89


state 55

   27 statement: ifstatement .
   28          | ifstatement . ELSE elsestatement

    ELSE  shift, and go to state 90

    $default  reduce using rule 27 (statement)


state 56

   56 ifstatement: ifpart . rest

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    IF      shift, and go to state 30
    WHILE   shift, and go to state 31
    HALT    shift, and go to state 33
    READ    shift, and go to state 34
    WRITE   shift, and go to state 35
    CLOSE   shift, and go to state 36
    SEEK    shift, and go to state 37
    LOCK    shift, and go to state 38
    DBLQT   shift, and go to state 5

    declr           go to state 39
    arrayterm       go to state 12
    statements      go to state 91
    statement       go to state 41
    openstatement   go to state 42
    openfirst       go to state 43
    seekstatement   go to state 44
    readstatement   go to state 45
    writestatement  go to state 46
    closestatement  go to state 47
    locdeclare      go to state 48
    whilestatement  go to state 49
    subroutine      go to state 50
    subrtnid        go to state 51
    arglist         go to state 52
    whilepart       go to state 53
    whilehead       go to state 54
    ifstatement     go to state 55
    ifpart          go to state 56
    rest            go to state 92
    lockstatement   go to state 57
    lockhead        go to state 58
    haltstatement   go to state 59
    assignment      go to state 60
    declrEQ         go to state 61
    term            go to state 62
    dblqtid         go to state 17


state 57

   31 statement: lockstatement .

    $default  reduce using rule 31 (statement)


state 58

   68 lockstatement: lockhead . statements UNLOCK SEMICOL

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    IF      shift, and go to state 30
    WHILE   shift, and go to state 31
    HALT    shift, and go to state 33
    READ    shift, and go to state 34
    WRITE   shift, and go to state 35
    CLOSE   shift, and go to state 36
    SEEK    shift, and go to state 37
    LOCK    shift, and go to state 38
    DBLQT   shift, and go to state 5

    declr           go to state 39
    arrayterm       go to state 12
    statements      go to state 93
    statement       go to state 41
    openstatement   go to state 42
    openfirst       go to state 43
    seekstatement   go to state 44
    readstatement   go to state 45
    writestatement  go to state 46
    closestatement  go to state 47
    locdeclare      go to state 48
    whilestatement  go to state 49
    subroutine      go to state 50
    subrtnid        go to state 51
    arglist         go to state 52
    whilepart       go to state 53
    whilehead       go to state 54
    ifstatement     go to state 55
    ifpart          go to state 56
    lockstatement   go to state 57
    lockhead        go to state 58
    haltstatement   go to state 59
    assignment      go to state 60
    declrEQ         go to state 61
    term            go to state 62
    dblqtid         go to state 17


state 59

   32 statement: haltstatement .

    $default  reduce using rule 32 (statement)


state 60

   30 statement: assignment .

    $default  reduce using rule 30 (statement)


state 61

   41 openfirst: declrEQ . OPEN LP arglist
   71 assignment: declrEQ . assexpr SEMICOL

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    MINUS   shift, and go to state 94
    OPEN    shift, and go to state 95
    DBLQT   shift, and go to state 5

    declr      go to state 96
    arrayterm  go to state 12
    assexpr    go to state 97
    expr       go to state 98
    expr0      go to state 99
    mulexpr    go to state 100
    term       go to state 16
    dblqtid    go to state 17


state 62

   10 declr: term .
   12 arrayterm: term . LBRCT expr RBRCT
   50 subrtnid: term . LP
   52 arglist: term .

    LP     shift, and go to state 101
    LBRCT  shift, and go to state 64

    EQ        reduce using rule 10 (declr)
    $default  reduce using rule 52 (arglist)


state 63

   15 program0: process1 LB . statements RB
   16         | process1 LB . RB
   23 process0: process1 LB . SEMICOL

    NUMBER   shift, and go to state 2
    ID       shift, and go to state 3
    IF       shift, and go to state 30
    WHILE    shift, and go to state 31
    RB       shift, and go to state 102
    HALT     shift, and go to state 33
    READ     shift, and go to state 34
    WRITE    shift, and go to state 35
    CLOSE    shift, and go to state 36
    SEEK     shift, and go to state 37
    SEMICOL  shift, and go to state 103
    LOCK     shift, and go to state 38
    DBLQT    shift, and go to state 5

    declr           go to state 39
    arrayterm       go to state 12
    statements      go to state 104
    statement       go to state 41
    openstatement   go to state 42
    openfirst       go to state 43
    seekstatement   go to state 44
    readstatement   go to state 45
    writestatement  go to state 46
    closestatement  go to state 47
    locdeclare      go to state 48
    whilestatement  go to state 49
    subroutine      go to state 50
    subrtnid        go to state 51
    arglist         go to state 52
    whilepart       go to state 53
    whilehead       go to state 54
    ifstatement     go to state 55
    ifpart          go to state 56
    lockstatement   go to state 57
    lockhead        go to state 58
    haltstatement   go to state 59
    assignment      go to state 60
    declrEQ         go to state 61
    term            go to state 62
    dblqtid         go to state 17


state 64

   12 arrayterm: term LBRCT . expr RBRCT

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    MINUS   shift, and go to state 94
    DBLQT   shift, and go to state 5

    declr      go to state 96
    arrayterm  go to state 12
    expr       go to state 105
    expr0      go to state 99
    mulexpr    go to state 100
    term       go to state 16
    dblqtid    go to state 17


state 65

   88 term: dblqtid DBLQT .

    $default  reduce using rule 88 (term)


state 66

   17 program0: SUBRTN subroutines program0 .

    $default  reduce using rule 17 (program0)


state 67

   19 subbody: LB . statements RB
   20        | LB . RB

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    IF      shift, and go to state 30
    WHILE   shift, and go to state 31
    RB      shift, and go to state 106
    HALT    shift, and go to state 33
    READ    shift, and go to state 34
    WRITE   shift, and go to state 35
    CLOSE   shift, and go to state 36
    SEEK    shift, and go to state 37
    LOCK    shift, and go to state 38
    DBLQT   shift, and go to state 5

    declr           go to state 39
    arrayterm       go to state 12
    statements      go to state 107
    statement       go to state 41
    openstatement   go to state 42
    openfirst       go to state 43
    seekstatement   go to state 44
    readstatement   go to state 45
    writestatement  go to state 46
    closestatement  go to state 47
    locdeclare      go to state 48
    whilestatement  go to state 49
    subroutine      go to state 50
    subrtnid        go to state 51
    arglist         go to state 52
    whilepart       go to state 53
    whilehead       go to state 54
    ifstatement     go to state 55
    ifpart          go to state 56
    lockstatement   go to state 57
    lockhead        go to state 58
    haltstatement   go to state 59
    assignment      go to state 60
    declrEQ         go to state 61
    term            go to state 62
    dblqtid         go to state 17


state 68

   18 subroutines: subnidarglist subbody .

    $default  reduce using rule 18 (subroutines)


state 69

   21 subnidarglist: subname LP . arglist RP

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    DBLQT   shift, and go to state 5

    arglist  go to state 108
    term     go to state 85
    dblqtid  go to state 17


state 70

    9 varlist: varlist COMMA declr .

    $default  reduce using rule 9 (varlist)


state 71

   57 ifpart: IF LP . cond RP LB

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    MINUS   shift, and go to state 94
    LP      shift, and go to state 109
    NOT     shift, and go to state 110
    DBLQT   shift, and go to state 5

    declr      go to state 96
    arrayterm  go to state 12
    cond       go to state 111
    andcond    go to state 112
    expr       go to state 113
    expr0      go to state 99
    mulexpr    go to state 100
    term       go to state 16
    dblqtid    go to state 17


state 72

   70 haltstatement: HALT SEMICOL .

    $default  reduce using rule 70 (haltstatement)


state 73

   44 readstatement: READ LP . arglist RP SEMICOL

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    DBLQT   shift, and go to state 5

    arglist  go to state 114
    term     go to state 85
    dblqtid  go to state 17


state 74

   45 writestatement: WRITE LP . arglist RP SEMICOL

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    DBLQT   shift, and go to state 5

    arglist  go to state 115
    term     go to state 85
    dblqtid  go to state 17


state 75

   46 closestatement: CLOSE LP . arglist RP SEMICOL

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    DBLQT   shift, and go to state 5

    arglist  go to state 116
    term     go to state 85
    dblqtid  go to state 17


state 76

   43 seekstatement: SEEK LP . arglist RP SEMICOL

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    DBLQT   shift, and go to state 5

    arglist  go to state 117
    term     go to state 85
    dblqtid  go to state 17


state 77

   69 lockhead: LOCK SEMICOL .

    $default  reduce using rule 69 (lockhead)


state 78

   72 declrEQ: declr EQ .

    $default  reduce using rule 72 (declrEQ)


state 79

   13 program0: process0 statements RB .

    $default  reduce using rule 13 (program0)


state 80

   26 statements: statements statement .

    $default  reduce using rule 26 (statements)


state 81

   42 opensecond: RP . SEMICOL

    SEMICOL  shift, and go to state 118


state 82

   40 openstatement: openfirst opensecond .

    $default  reduce using rule 40 (openstatement)


state 83

   49 subroutine: subrtnid subrest .

    $default  reduce using rule 49 (subroutine)


state 84

   51 subrest: arglist . RP SEMICOL
   53 arglist: arglist . COMMA term

    RP     shift, and go to state 119
    COMMA  shift, and go to state 87


state 85

   52 arglist: term .

    $default  reduce using rule 52 (arglist)


state 86

   47 locdeclare: arglist SEMICOL .

    $default  reduce using rule 47 (locdeclare)


state 87

   53 arglist: arglist COMMA . term

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    DBLQT   shift, and go to state 5

    term     go to state 120
    dblqtid  go to state 17


state 88

   48 whilestatement: whilepart LB . rest

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    IF      shift, and go to state 30
    WHILE   shift, and go to state 31
    HALT    shift, and go to state 33
    READ    shift, and go to state 34
    WRITE   shift, and go to state 35
    CLOSE   shift, and go to state 36
    SEEK    shift, and go to state 37
    LOCK    shift, and go to state 38
    DBLQT   shift, and go to state 5

    declr           go to state 39
    arrayterm       go to state 12
    statements      go to state 91
    statement       go to state 41
    openstatement   go to state 42
    openfirst       go to state 43
    seekstatement   go to state 44
    readstatement   go to state 45
    writestatement  go to state 46
    closestatement  go to state 47
    locdeclare      go to state 48
    whilestatement  go to state 49
    subroutine      go to state 50
    subrtnid        go to state 51
    arglist         go to state 52
    whilepart       go to state 53
    whilehead       go to state 54
    ifstatement     go to state 55
    ifpart          go to state 56
    rest            go to state 121
    lockstatement   go to state 57
    lockhead        go to state 58
    haltstatement   go to state 59
    assignment      go to state 60
    declrEQ         go to state 61
    term            go to state 62
    dblqtid         go to state 17


state 89

   54 whilepart: whilehead LP . cond RP

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    MINUS   shift, and go to state 94
    LP      shift, and go to state 109
    NOT     shift, and go to state 110
    DBLQT   shift, and go to state 5

    declr      go to state 96
    arrayterm  go to state 12
    cond       go to state 122
    andcond    go to state 112
    expr       go to state 113
    expr0      go to state 99
    mulexpr    go to state 100
    term       go to state 16
    dblqtid    go to state 17


state 90

   28 statement: ifstatement ELSE . elsestatement

    LB  shift, and go to state 123

    elsestatement  go to state 124
    elsepart       go to state 125


state 91

   26 statements: statements . statement
   58 rest: statements . RB

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    IF      shift, and go to state 30
    WHILE   shift, and go to state 31
    RB      shift, and go to state 126
    HALT    shift, and go to state 33
    READ    shift, and go to state 34
    WRITE   shift, and go to state 35
    CLOSE   shift, and go to state 36
    SEEK    shift, and go to state 37
    LOCK    shift, and go to state 38
    DBLQT   shift, and go to state 5

    declr           go to state 39
    arrayterm       go to state 12
    statement       go to state 80
    openstatement   go to state 42
    openfirst       go to state 43
    seekstatement   go to state 44
    readstatement   go to state 45
    writestatement  go to state 46
    closestatement  go to state 47
    locdeclare      go to state 48
    whilestatement  go to state 49
    subroutine      go to state 50
    subrtnid        go to state 51
    arglist         go to state 52
    whilepart       go to state 53
    whilehead       go to state 54
    ifstatement     go to state 55
    ifpart          go to state 56
    lockstatement   go to state 57
    lockhead        go to state 58
    haltstatement   go to state 59
    assignment      go to state 60
    declrEQ         go to state 61
    term            go to state 62
    dblqtid         go to state 17


state 92

   56 ifstatement: ifpart rest .

    $default  reduce using rule 56 (ifstatement)


state 93

   26 statements: statements . statement
   68 lockstatement: lockhead statements . UNLOCK SEMICOL

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    IF      shift, and go to state 30
    WHILE   shift, and go to state 31
    HALT    shift, and go to state 33
    READ    shift, and go to state 34
    WRITE   shift, and go to state 35
    CLOSE   shift, and go to state 36
    SEEK    shift, and go to state 37
    LOCK    shift, and go to state 38
    UNLOCK  shift, and go to state 127
    DBLQT   shift, and go to state 5

    declr           go to state 39
    arrayterm       go to state 12
    statement       go to state 80
    openstatement   go to state 42
    openfirst       go to state 43
    seekstatement   go to state 44
    readstatement   go to state 45
    writestatement  go to state 46
    closestatement  go to state 47
    locdeclare      go to state 48
    whilestatement  go to state 49
    subroutine      go to state 50
    subrtnid        go to state 51
    arglist         go to state 52
    whilepart       go to state 53
    whilehead       go to state 54
    ifstatement     go to state 55
    ifpart          go to state 56
    lockstatement   go to state 57
    lockhead        go to state 58
    haltstatement   go to state 59
    assignment      go to state 60
    declrEQ         go to state 61
    term            go to state 62
    dblqtid         go to state 17


state 94

   85 mulexpr: MINUS . declr

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    DBLQT   shift, and go to state 5

    declr      go to state 128
    arrayterm  go to state 12
    term       go to state 16
    dblqtid    go to state 17


state 95

   41 openfirst: declrEQ OPEN . LP arglist

    LP  shift, and go to state 129


state 96

   84 mulexpr: declr .

    $default  reduce using rule 84 (mulexpr)


state 97

   71 assignment: declrEQ assexpr . SEMICOL

    SEMICOL  shift, and go to state 130


state 98

   73 assexpr: expr .

    $default  reduce using rule 73 (assexpr)


state 99

   74 expr: expr0 .
   76 expr0: expr0 . PLUS mulexpr
   77      | expr0 . MINUS mulexpr
   78      | expr0 . GE_OP mulexpr
   79      | expr0 . GT_OP mulexpr
   80      | expr0 . LE_OP mulexpr
   81      | expr0 . LT_OP mulexpr
   82      | expr0 . EQ_OP mulexpr
   83      | expr0 . NE_OP mulexpr

    PLUS   shift, and go to state 131
    MINUS  shift, and go to state 132
    LE_OP  shift, and go to state 133
    GE_OP  shift, and go to state 134
    LT_OP  shift, and go to state 135
    GT_OP  shift, and go to state 136
    EQ_OP  shift, and go to state 137
    NE_OP  shift, and go to state 138

    $default  reduce using rule 74 (expr)


state 100

   75 expr0: mulexpr .
   86 mulexpr: mulexpr . DIV declr
   87        | mulexpr . MUL declr

    MUL  shift, and go to state 139
    DIV  shift, and go to state 140

    $default  reduce using rule 75 (expr0)


state 101

   50 subrtnid: term LP .

    $default  reduce using rule 50 (subrtnid)


state 102

   16 program0: process1 LB RB .

    $default  reduce using rule 16 (program0)


state 103

   23 process0: process1 LB SEMICOL .

    $default  reduce using rule 23 (process0)


state 104

   15 program0: process1 LB statements . RB
   26 statements: statements . statement

    NUMBER  shift, and go to state 2
    ID      shift, and go to state 3
    IF      shift, and go to state 30
    WHILE   shift, and go to state 31
    RB      shift, and go to state 141
    HALT    shift, and go to state 33
    READ    shift, and go to state 34
    WRITE   shift, and go to state 35
    CLOSE   shift, and go to state 36
    SEEK    shift, and go to state 37
    LOCK    shift, and go to state 38
    DBLQT   shift, and go to state 5

    declr           go to state 39
    arrayterm       go to state 12
    statement       go to state 80
    openstatement   go to state 42
    openfirst       go to state 43
    seekstatement   go to state 44
    readstatement   go to state 45
    writestatement  go to state 46
    closestatement  go to state 47
    locdeclare      go to state 48
    whilestatement  go to state 49
    subroutine      go to state 50
    subrtnid        go to state 51
    arglist         go to state 52
    whilepart       go to state 53
    whilehead       go to state 54
    ifstatement     go to state 55
    ifpart          go to state 56
    lockstatement   go to state 57
    lockhead        go to state 58
    haltstatement   go to state 59
    assignment      go to state 60
    declrEQ         go to state 61
    term            go to state 62
    dblqtid         go to state 17


state 105

   12 arrayterm: term LBRCT expr . RBRCT

    RBRCT  shift, and go to state 142


state 106

   20 subbody: LB RB .
